--- a/views/game.ejs
+++ b/views/game.ejs
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>game</title>
-	<script src="js/vendor/enchant.js/build/enchant.js"></script>
+	<script src="vendor/jquery/dist/jquery.min.js"></script>
+	<script src="vendor/enchant.js/build/enchant.js"></script>
 	<script src="js/main.js"></script>
 </head>
 <body>
