--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,31 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!doctype html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+</head>
+<body>
+
+<h1><%= title %></h1>
+<p>Welcome to <%= title %></p>
+
+<% if (mustLogin) { %>
+<p>ログインしてください。</p>
+<% } %>
+
+<% if (logined) { %>
+
+<p>logined</p>
+<p><a href="/auth/logout">logout</a></p>
+<p>Hello, <%= user.displayName %></p>
+
+<% } else { %>
+
+<p><a href="/auth/twitter">login</a></p>
+
+<% } %>
+
+</body>
+
 </html>
