--- a/views/game.ejs
+++ b/views/game.ejs
@@ -2,14 +2,17 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>game</title>
+	<title><%= app.game_title %></title>
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 	<script src="vendor/jquery/dist/jquery.min.js"></script>
-	<script src="vendor/enchant.js/build/enchant.js"></script>
+	<script src="vendor/underscore/underscore-min.js"></script>
+	<script src="vendor/enchant.js-builds/build/enchant.js"></script>
 	<script src="js/main.js"></script>
 </head>
 <body>
 	<div id="container">
-		
+		<h1><%= app.game_title %></h1>
 	</div>
 </body>
 </html>
