マージされたところ

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title><%= app.game_title %></title>
+	<title><%= title %></title>
 	<link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 	<script src="vendor/jquery/dist/jquery.min.js"></script>
