分離したファイルを全部読み込むようにした。

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -8,6 +8,11 @@
 	<script src="vendor/jquery/dist/jquery.min.js"></script>
 	<script src="vendor/underscore/underscore-min.js"></script>
 	<script src="vendor/enchant.js-builds/build/enchant.js"></script>
+	<script src="js/model/base_block.js"></script>
+	<script src="js/model/noto_label.js"></script>
+	<script src="js/model/ojama_block.js"></script>
+	<script src="js/model/player.js"></script>
+	<script src="js/model/timer.js"></script>
 	<script src="js/main.js"></script>
 </head>
 <body>
