ゲームの開始の実装とリファクタリング

--- a/views/socketTest.ejs
+++ b/views/socketTest.ejs
@@ -33,6 +33,11 @@
     <button type="button" id="call-game-btn">Submit</button>
 </form>
 
+<form class="start-game-test">
+    <h2>Emit: start-game</h2>
+    <button type="button" id="start-game-btn">Start Game</button>
+</form>
+
 <!-- load javascripts -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
