--- a/views/socketTest.ejs
+++ b/views/socketTest.ejs
@@ -33,6 +33,11 @@
     <button type="button" id="call-game-btn">Submit</button>
 </form>
 
+<form class="join-robby-test">
+    <h2>Emit: join-robby</h2>
+    <button type="button" id="join-robby-btn">Join Robby</button>
+</form>
+
 <form class="start-game-test">
     <h2>Emit: start-game</h2>
     <button type="button" id="start-game-btn">Start Game</button>
