--- a/views/socketTest.ejs
+++ b/views/socketTest.ejs
@@ -33,9 +33,9 @@
     <button type="button" id="call-game-btn">Submit</button>
 </form>
 
-<form class="join-robby-test">
-    <h2>Emit: join-robby</h2>
-    <button type="button" id="join-robby-btn">Join Robby</button>
+<form class="join-lobby-test">
+    <h2>Emit: join-lobby</h2>
+    <button type="button" id="join-lobby-btn">Join Lobby</button>
 </form>
 
 <form class="start-game-test">
