--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
 
 <a class="waves-effect waves-light btn" href="/auth/logout"><i class="mdi-social-person-outline right" ></i>ログアウト</a>
 <p><%= user.displayName %>さん、こんにちは</p>
+<a href="/lobby">ロビー</a>
 
 <% } else { %>
 
