--- a/views/socketTest.ejs
+++ b/views/socketTest.ejs
@@ -7,7 +7,7 @@
     <style>
         #blocks ul {
             float: left;
-            width: 200px;
+            width: 150px;
         }
         #blocks ul li {
             list-style-type: none;
@@ -18,6 +18,7 @@
             display: inline-block;
             width: 15px;
             height: 15px;
+            text-align: center;
         }
     </style>
 </head>
@@ -59,6 +60,32 @@
     <button type="button" id="start-game-btn">Start Game</button>
 </form>
 
+<form class="random-swap-blocks-test">
+    <h2>Emit: swap-blocks (random)</h2>
+    <button type="button" id="random-swap-blocks-btn">Random Swap Blocks</button>
+</form>
+
+<form class="swap-blocks-test">
+    <h2>Emit: swap-blocks</h2>
+    <div>
+        <label for="swap-blocks-x1">x1</label>
+        <input type="text" id="swap-blocks-x1" value="0">
+    </div>
+    <div>
+        <label for="swap-blocks-y1">y1</label>
+        <input type="text" id="swap-blocks-y1" value="0">
+    </div>
+    <div>
+        <label for="swap-blocks-x2">x2</label>
+        <input type="text" id="swap-blocks-x2" value="1">
+    </div>
+    <div>
+        <label for="swap-blocks-y2">y2</label>
+        <input type="text" id="swap-blocks-y2" value="0">
+    </div>
+    <button type="button" id="swap-blocks-btn">Swap Blocks</button>
+</form>
+
 <hr>
 
 <div id="blocks">
@@ -69,6 +96,7 @@
 <!-- load javascripts -->
 <script src="/socket.io/socket.io.js"></script>
 <script src="/vendor/jquery/dist/jquery.min.js"></script>
+<script src="/vendor/underscore/underscore-min.js"></script>
 <script src="/javascripts/test/socket.js"></script>
 
 </body>
