バグ修正とか

--- a/views/socketTest.ejs
+++ b/views/socketTest.ejs
@@ -86,6 +86,11 @@
     <button type="button" id="swap-blocks-btn">Swap Blocks</button>
 </form>
 
+<form class="random-block-wrap-erase-test">
+    <h2>Emit: block-wrap-erase (random)</h2>
+    <button type="button" id="random-block-wrap-erase-btn">Random Block Wrap Erase</button>
+</form>
+
 <hr>
 
 <div id="blocks">
