--- a/views/result.ejs
+++ b/views/result.ejs
@@ -7,10 +7,9 @@
 </head>
 <body style="background-color: #e0e0e0">
 <h1 style="text-align: center">リザルト</h1>
+
 <div class="row ">
-    <div class="col s6" style="margin: 0:auto;">
-    <div class="row">
-        <div class="col s5 z-depth-3">
+    <div class="col s3  offset-s2">
             <div class="card center">
                 <div class="card-image">
                     <!-- TwitterIcon-->
@@ -22,29 +21,23 @@
                 <div class="card-action">
                     <p>score:1</p>
                 </div>
-            </div>
-        </div>
         </div>
     </div>
 
-    <div class="col s6" style="margin: 0:auto;">
-        <div class="row">
-            <div class="col s5 z-depth-3">
-                <div class="card center">
-                    <div class="card-image">
-                        <!-- TwitterIcon-->
-                        <img src="#">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">対戦相手name</span>
-                    </div>
-                    <div class="card-action">
-                        <p>score:2</p>
-                    </div>
+    <div class="col s3 offset-s2">
+            <div class="card center">
+                <div class="card-image">
+                    <!-- TwitterIcon-->
+                    <img src="#">
                 </div>
-            </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">対戦相手name</span>
+                </div>
+                <div class="card-action">
+                    <p>score:2</p>
+                </div>
+        </div>
     </div>
-</div>
 </div>
 <a class="btn waves-effect waves-light" href="#" style="text-align: center;margin: 0: auto;"><i class="mdi-content-undo left"></i>対戦を終わる</a>
 
